src/objects/c2g__BillingSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Extension Settings in general including Billing and Payable Extension</description>
    <fields>
        <fullName>c2g__DisableTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the FFA Billing Triggers. Select if the Billing Extension is to be used instead.</description>
        <label>DisableTriggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HeaderExpanded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show Header details on Manage lines as expanded by default</description>
        <label>Header Expanded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__StopUsingAPExtensionPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stop Using AP Extension Package</description>
        <label>Stop Using AP Extension Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__UseAPExtensionPackageFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use AP Extension Package Fields</description>
        <label>Use AP Extension Package Fields</label>
        <type>Checkbox</type>
    </fields>
    <label>Extension Settings (FF)</label>
</CustomObject>